# CS-Light-SW

./: .gitignore  LightSeq.html  README.md  app.jsx  styles.css
backend/: audio_processor.py  dev_server.py  isa_compiler.py  main.py  pyproject.toml
frontend/cs_light_frontend/: README.md  package-lock.json  package.json
frontend/cs_light_frontend/src/: App.vue
frontend/cs_light_frontend/src/components/: ParameterPanel.vue  TimelineEditor.vue  TopBar.vue
frontend/cs_light_frontend/src/stores/: projectStore.js
