[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "librosa>=0.11.0",
    "numpy>=2.4.2",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "uvicorn>=0.41.0",
]
